--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
         <br>
         <label for="cast">Select your cast:</label>
         <select name="Option" id="cast">
-            <option value="Genral">Genral</option>
+            <option value="General">Genral</option>
             <option value="OBC">OBC</option>
             <option value="others">others</option>
             </select>
